gitops-k8s/environments/env1/apps/mfe-shell/manifest/mfe-shell-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mfe-shell-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, PUT, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization,X-Requested-With,x-lockid,Cache-Control,accept-language"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx-private
  tls:
    - hosts:
        - "env1.sqfaas.dev"
      secretName: ingress-secret
  rules:
    - host: "env1.sqfaas.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mfe-shell
                port:
                  number: 80
